[package]
name = "game-station"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = "0.15"
serde = { version = "1.0", features = ["derive"] }
async-graphql = { version = "7.0", default-features = false }
thiserror = "1.0"

[dev-dependencies]
linera-sdk = { version = "0.15", features = ["test"] }

[[bin]]
name = "game_station_contract"
path = "src/contract.rs"

[[bin]]
name = "game_station_service"
path = "src/service.rs"
